[gd_scene format=3 uid="uid://68cn77ypvh6y"]

[ext_resource type="Script" uid="uid://4fgkyu3an5fp" path="res://ui/travel book/inventory container/inventory_container.gd" id="1_gi771"]
[ext_resource type="PackedScene" uid="uid://dcxl0usa61v3o" path="res://ui/travel book/frame slot/frame_slot.tscn" id="4_u1cos"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_t2qhv"]
load_path = "res://.godot/imported/scroll_grabber.png-249a6be541424fbe8a7b68b94ef79b7d.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_f8ryo"]
atlas = SubResource("CompressedTexture2D_t2qhv")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bek0b"]
load_path = "res://.godot/imported/scroll_grabber.png-249a6be541424fbe8a7b68b94ef79b7d.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_fa2jk"]
atlas = SubResource("CompressedTexture2D_bek0b")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5a7qb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v6hve"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fk3v0"]
load_path = "res://.godot/imported/v_bar.png-d78c1d03b8075a2a74130327d393c1fb.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t5vj2"]
texture = SubResource("CompressedTexture2D_fk3v0")
texture_margin_top = 3.0
texture_margin_bottom = 3.0
expand_margin_left = 2.0
expand_margin_right = 2.0
region_rect = Rect2(0, 0, 4, 62)

[sub_resource type="Theme" id="Theme_215a6"]
VSlider/icons/grabber = SubResource("AtlasTexture_f8ryo")
VSlider/icons/grabber_highlight = SubResource("AtlasTexture_fa2jk")
VSlider/styles/grabber_area = SubResource("StyleBoxEmpty_5a7qb")
VSlider/styles/grabber_area_highlight = SubResource("StyleBoxEmpty_v6hve")
VSlider/styles/slider = SubResource("StyleBoxTexture_t5vj2")

[node name="InventoryContainer" type="Control" unique_id=960653195]
custom_minimum_size = Vector2(212, 224)
layout_mode = 3
anchor_left = 0.40820313
anchor_top = 0.3271605
anchor_right = 0.5917969
anchor_bottom = 0.6728395
offset_top = -1.5258789e-05
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_gi771")
metadata/_edit_use_anchors_ = true

[node name="InventorySlider" type="Control" parent="." unique_id=761462499]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
scale = Vector2(1.75, 1.75)

[node name="ScrollSlider" type="VSlider" parent="InventorySlider" unique_id=324343380]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.285713
offset_top = -64.285706
offset_right = 4.285713
offset_bottom = 64.285706
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = SubResource("Theme_215a6")
max_value = 1.0
step = 0.001
value = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="." unique_id=334764815]
custom_minimum_size = Vector2(198, 224)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -112.0
offset_bottom = 112.0
grow_horizontal = 0
grow_vertical = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="GridSlot" type="GridContainer" parent="ScrollContainer" unique_id=863813153]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 4

[node name="FrameSlot" parent="ScrollContainer/GridSlot" unique_id=1739541518 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot2" parent="ScrollContainer/GridSlot" unique_id=1333444984 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot3" parent="ScrollContainer/GridSlot" unique_id=1871610533 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot4" parent="ScrollContainer/GridSlot" unique_id=1008144116 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot5" parent="ScrollContainer/GridSlot" unique_id=2017604150 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot6" parent="ScrollContainer/GridSlot" unique_id=1810155645 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot7" parent="ScrollContainer/GridSlot" unique_id=1680003122 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot8" parent="ScrollContainer/GridSlot" unique_id=1330181006 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot9" parent="ScrollContainer/GridSlot" unique_id=1963569879 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot10" parent="ScrollContainer/GridSlot" unique_id=1833046345 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot11" parent="ScrollContainer/GridSlot" unique_id=2012166463 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot12" parent="ScrollContainer/GridSlot" unique_id=1249465897 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot13" parent="ScrollContainer/GridSlot" unique_id=1154669391 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot14" parent="ScrollContainer/GridSlot" unique_id=1681337123 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot15" parent="ScrollContainer/GridSlot" unique_id=665383606 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot16" parent="ScrollContainer/GridSlot" unique_id=2037542438 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot17" parent="ScrollContainer/GridSlot" unique_id=2075479067 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot18" parent="ScrollContainer/GridSlot" unique_id=1988953481 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot19" parent="ScrollContainer/GridSlot" unique_id=1355798467 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot20" parent="ScrollContainer/GridSlot" unique_id=1351785620 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot21" parent="ScrollContainer/GridSlot" unique_id=372617295 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot22" parent="ScrollContainer/GridSlot" unique_id=1383599845 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot23" parent="ScrollContainer/GridSlot" unique_id=1428125995 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot24" parent="ScrollContainer/GridSlot" unique_id=1218051885 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot25" parent="ScrollContainer/GridSlot" unique_id=1833251701 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot26" parent="ScrollContainer/GridSlot" unique_id=1501933672 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot27" parent="ScrollContainer/GridSlot" unique_id=1640256440 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot28" parent="ScrollContainer/GridSlot" unique_id=667815712 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot29" parent="ScrollContainer/GridSlot" unique_id=995354684 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot30" parent="ScrollContainer/GridSlot" unique_id=1967998322 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot31" parent="ScrollContainer/GridSlot" unique_id=845299030 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot32" parent="ScrollContainer/GridSlot" unique_id=593135477 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot33" parent="ScrollContainer/GridSlot" unique_id=1125098732 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot34" parent="ScrollContainer/GridSlot" unique_id=1428590802 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot35" parent="ScrollContainer/GridSlot" unique_id=562254676 instance=ExtResource("4_u1cos")]
layout_mode = 2

[node name="FrameSlot36" parent="ScrollContainer/GridSlot" unique_id=611923968 instance=ExtResource("4_u1cos")]
layout_mode = 2

[connection signal="value_changed" from="InventorySlider/ScrollSlider" to="." method="_on_scroll_slider_value_changed"]
[connection signal="gui_input" from="ScrollContainer" to="." method="_on_scroll_container_gui_input"]
